# hfsearch

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  code-quality.yml  publish.yml
hfsearch/: __init__.py  cli.py  export.py  search.py
