[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hfsearch"
version = "1.0.1"
description = "A Python library and CLI tool to search for models and datasets on Hugging Face Hub"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Henok Ademtew", email = "henokb2124@gmail.com"}
]
keywords = ["huggingface", "search", "models", "datasets", "nlp", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "huggingface_hub>=0.20.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/HenokB/hfsearch"
Documentation = "https://github.com/HenokB/hfsearch#readme"
Repository = "https://github.com/HenokB/hfsearch"
Issues = "https://github.com/HenokB/hfsearch/issues"

[project.scripts]
hfsearch = "hfsearch.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hfsearch*"]
